LAB2_Game/.metadata/.plugins/org.eclipse.cdt.ui/LAB3_Game.build.log
02:06:04 **** Incremental Build of configuration Debug for project LAB3_Game ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G474xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:104:3: warning: implicit declaration of function 'SPITxRx_Setup' [-Wimplicit-function-declaration]
  104 |   SPITxRx_Setup();
      |   ^~~~~~~~~~~~~
../Core/Src/main.c:105:3: warning: implicit declaration of function 'TikTokGame' [-Wimplicit-function-declaration]
  105 |   TikTokGame();
      |   ^~~~~~~~~~
../Core/Src/main.c:115:11: warning: implicit declaration of function 'SPITxRx_readIO' [-Wimplicit-function-declaration]
  115 |           SPITxRx_readIO();
      |           ^~~~~~~~~~~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:307:6: warning: conflicting types for 'SPITxRx_Setup'; have 'void()'
  307 | void SPITxRx_Setup()
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:104:3: note: previous implicit declaration of 'SPITxRx_Setup' with type 'void()'
  104 |   SPITxRx_Setup();
      |   ^~~~~~~~~~~~~
../Core/Src/main.c:316:6: warning: conflicting types for 'SPITxRx_readIO'; have 'void()'
  316 | void SPITxRx_readIO()
      |      ^~~~~~~~~~~~~~
../Core/Src/main.c:115:11: note: previous implicit declaration of 'SPITxRx_readIO' with type 'void()'
  115 |           SPITxRx_readIO();
      |           ^~~~~~~~~~~~~~
../Core/Src/main.c:329:6: warning: conflicting types for 'TikTokGame'; have 'void()'
  329 | void TikTokGame()
      |      ^~~~~~~~~~
../Core/Src/main.c:105:3: note: previous implicit declaration of 'TikTokGame' with type 'void()'
  105 |   TikTokGame();
      |   ^~~~~~~~~~
../Core/Src/main.c: In function 'TikTokGame':
../Core/Src/main.c:339:9: error: '\U0000200b' undeclared (first use in this function)
  339 |         â€?{
      |          
../Core/Src/main.c:339:9: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:339:9: error: expected ';' before '{' token
  339 |         â€?{
      |         ^
      |         ;
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

02:06:04 Build Failed. 3 errors, 6 warnings. (took 401ms)

